Refactor project structure and implement new features
- Update .gitignore to include dev.db
- Remove server.ts and integrate routes for destinations and contacts
- Add logging middleware for request tracking
- Create routes for managing destinations and contacts
- Update package.json scripts for development
- Add database migration for Kontak table
- Modify index.html and kontak.html for improved navigation and form submission
- Adjust tsconfig.json root directory for source files

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn backend/src/server.ts",
+    "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma": "prisma",
     "seed" : "npx ts-node prisma/seed.ts",
+    "db:generate": "prisma generate",
     "db:studio" : "prisma studio"
   },
   "dependencies": {
