--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "traveling-backend",
   "version": "1.0.0",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
