--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
 node_modules
 # Keep environment variables out of version control
 .env
+
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
 /prisma/dev.db
+prisma/dev.db
+/prisma/dev.db.journal
+prisma/dev.db.journal
+db.sqlite
+*.dev.db
+*.sqlite
+*.db
 
 /src/generated/prisma
