Refactor scripts in package.json, update tsconfig for ESNext module, and implement seed data for destinations with images

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "prisma": "prisma",
-    "seed" : "npx ts-node prisma/seed.ts",
-    "db:studio" : "prisma studio",
+    "seed": "node prisma/seed.js",
+    "db:studio": "prisma studio",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev --name init"
   },
@@ -25,6 +25,7 @@
     "prisma": "^5.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.1.6"
   }
 }
