Add new database push command, update seed data with local images, and enhance destination routes with image inclusion

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/server.js",
     "prisma": "prisma",
     "seed": "node prisma/seed.js",
+    "db:push" : "prisma db push",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev --name init"
