--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:push" : "prisma db push",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev --name init"
+    "db:migrate": "prisma migrate dev --name init",
+    "delete:module": "rm -rf node_modules pnpm-lock.yaml package-lock.json yarn.lock"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
