--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/server.js",
     "prisma": "prisma",
     "seed": "node prisma/seed.js",
-    "db:push" : "prisma db push",
+    "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev --name init",
@@ -18,7 +18,8 @@
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "readme-md-generator": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
