refactor: update PrismaClient import to use package default export

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "type": "module",
+  "engines": {
+    "node" : "18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
